<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="view_image_fullscreen">View image full screen</string>

    <!-- Application name and year are provided by build.gradle -->

    <!-- MainActivity Tabs -->
    <string name="fav_tab">Faves️</string>
    <string name="map_tab">Map</string>
    <string name="camps_tab">CAMPS</string>
    <string name="events_tab">EVENTS</string>
    <string name="art_tab">ART</string>
    <string name="mutant_vehicles_tab">CARS</string>
    <string name="explore_tab">Now</string>
    <string name="feedback_tab">Fdbk</string>
    <string name="browse_tab">Browse</string>
    <string name="no_results">No Results</string>
    <string name="mark_some_favorites">Touch the ❤ near a Camp, Event, Art, or Mutant Vehicle to see it here</string>
    <string name="no_items_found">No Items Found</string>
    <string name="action_home">Set Home Camp</string>
    <string name="action_nav_home">Navigate to Home Camp</string>
    <string name="unlock">Unlock</string>
    <string name="embargo_disabled">Embargo Disabled</string>
    <string name="location_data_unlocked">Camp, Art, and Event location data unlocked!</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="youre_so_far">You\'re so far away</string>
    <string name="lets_burn">Let\'s Burn!</string>
    <string name="welcome">With iBurn in your pocket, you\'re ready to find your way around
        the Playa. Camp Location data will become available once the Burn begins. \n\n Try everything, piss clear, and stay safe!</string>
    <string name="welcome_iburn">Welcome to iBurn!</string>
    <string name="requres_play_services">iBurn requires Google Play Services…</string>
    <string name="device_not_supported">Your device doesn\'t jive with our mapping tech. So sorry…</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="starts">Starts </string>
    <string name="ended">Ended </string>
    <string name="ends">Ends </string>
    <string name="home">Home</string>
    <string name="tab_time">TIME</string>
    <string name="any_type">ALL TYPES</string>
    <string name="any_day">ALL DAYS</string>
    <string name="filter_by_day">Filter by Day</string>
    <string name="filter_by_type">Filter by Type</string>
    <string name="all">ALL</string>
    <string name="done">Done</string>
    <string name="default_custom_pin_title">A Special Place</string>
    <string name="dialog_edit_marker_title">Edit Marker</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="enter_unlock_code">Enter Unlock Code</string>
    <string name="unlock_description">Location info is hidden until gates open.</string>
    <string name="dialog_data_rescue_title">Data Rescued!</string>
    <string name="dialog_data_rescue_body">We recovered %d favorites and custom map pins lost in a prior app update. Sorry to make you sweat!</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="action_settings">Settings</string>
    <string name="embargo_msg_1">ART &amp; CAMP LOCATIONS</string>
    <string name="embargo_msg_2">WILL BE AVAILABLE %s</string>
    <string name="embargo_msg_3">OR WITH STAFF UNLOCK CODE ->️</string>
    <string-array name="news_ticker">
        <item>DAFT PUNK CONCERT AT TRASH FENCE</item>
        <item>CENSUS: LAST YEARS BURN BEST YET</item>
        <item>POLL: IT WAS BETTER NEXT YEAR</item>
        <item>2018 THEME: TURNKEY CAMPS</item>
    </string-array>

    <string name="also_at">Also at:</string>
    <string name="hosted_events">Hosted Events</string>
    <string name="detail_type_event">Event</string>
    <string name="detail_type_camp">Camp</string>
    <string name="detail_type_art">Art</string>
    <string name="detail_type_mutant_vehicle">Mutant Vehicle</string>
    <string name="detail_when">When</string>
    <string name="detail_where">Where</string>
    <string name="detail_about">About</string>
    <string name="detail_artist">Artist</string>
    <string name="detail_hometown">Hometown</string>
    <string name="detail_contact">Contact</string>
    <string name="detail_website">Website</string>
    <string name="detail_creator">Creator</string>
    <string name="detail_hosted_by">Hosted by</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="we_love_feedback">We ❤ Feedback</string>
    <string name="feedback_hint">What do you think?</string>
    <string name="email_feedback">Email Feedback</string>

    <!-- WelcomeActivity -->
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="place_custom_markers_tip">You can also add custom map markers later. Look for this icon on the app\'s map view.</string>
    <string name="home_camp_hint">Enter Home Camp Name</string>
    <string name="mark_home_camp">Mark Home Camp?</string>
    <string name="location_data_notice">Burning Man prohibits displaying Camp, Event, and Art locations until %s, or when you arrive on Playa.</string>
    <string name="location_notice_title">A Word on Location</string>
    <string name="no_now_items">Check back once you get to Burning Man</string>
    <string name="audio_tour_art_only">AUDIO TOUR</string>
    <string name="all_art">ALL</string>
    <string name="play_audio_tour">Play Audio Tour</string>
    <string name="pause_audio_tour">Pause Audio Tour</string>
    <string name="camp_location_unknown">Sorry, we don\'t have location data for that camp. You can add a marker later from the app\'s map view.</string>
    <string name="place_marker">Move the map, then tap marker to place it</string>
    <string name="show_location_trail">Show Location Trail</string>
    <string name="location_trail_history">Location Trail History…</string>
    <string name="location_trail_history_title">Location Trail History</string>
    <string name="location_trail_history_menu">Trail History: %1$d minutes</string>
    <string name="location_trail_history_minutes">%1$d minutes</string>
    <string name="show_camp_boundaries">Show Camp Boundaries</string>
    <string name="show_camp_names">Show Camp Names</string>
    <!-- provided by build.gradle -->

</resources>
