<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map_tab" />

    <item
        android:id="@+id/tab_now"
        android:icon="@drawable/ic_watch_later_black_24dp"
        android:title="@string/explore_tab" />

    <item
        android:id="@+id/tab_browse"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/browse_tab" />

    <item
        android:id="@+id/tab_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/fav_tab" />

        <item
        android:id="@+id/tab_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search_title" />
</menu>