<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginBottom="2dp"
    android:orientation="horizontal"
    android:weightSum="1.0">

    <TextView
        android:id="@+id/artSelection"
        style="@style/PlayaListViewHeaderItem"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:layout_marginEnd="@dimen/list_header_item_margin"
        android:text="@string/art_tab" />

    <TextView
        android:id="@+id/campSelection"
        style="@style/PlayaListViewHeaderItem"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:layout_marginEnd="@dimen/list_header_item_margin"
        android:text="@string/camps_tab" />

    <TextView
        android:id="@+id/mutantVehicleSelection"
        style="@style/PlayaListViewHeaderItem"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:layout_marginEnd="@dimen/list_header_item_margin"
        android:text="@string/mutant_vehicles_tab" />

    <TextView
        android:id="@+id/eventSelection"
        style="@style/PlayaListViewHeaderItem"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:text="@string/events_tab" />

</LinearLayout>
