<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.gaiagps.iburn.fragment.FeedbackFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/we_love_feedback" />

    <EditText
        android:id="@+id/feedback"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:hint="@string/feedback_hint"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"/>

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:layout_below="@id/feedback"
        android:layout_centerHorizontal="true"
        android:text="@string/email_feedback"/>

</RelativeLayout>
