<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipChildren="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="32dp">

    <!-- Welcome 3 : Set home location -->

    <TextView
        android:id="@+id/heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/welcome_text_margin"
        android:layout_marginRight="@dimen/welcome_text_margin"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/mark_home_camp"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/bodyContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/heading"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id='@+id/campNameSearch'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/welcome_text_margin"
            android:layout_marginRight="@dimen/welcome_text_margin"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/puck_home"
            android:drawablePadding="4dp"
            android:hint="@string/home_camp_hint"
            android:inputType="textFilter|textNoSuggestions"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/yurt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:scaleType="centerInside"
            android:src="@drawable/yurt" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="@dimen/welcome_text_margin"
        android:layout_marginRight="@dimen/welcome_text_margin"
        android:drawableLeft="@drawable/map_btn_pin"
        android:drawablePadding="4dp"
        android:text="@string/place_custom_markers_tip"
        android:textSize="@dimen/welcome_content" />
</RelativeLayout>