<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/map_bg"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="312dp"
                app:layout_collapseMode="parallax" />

            <View
                android:id="@+id/toolbar_scrim"
                android:layout_width="match_parent"
                android:layout_height="@dimen/playa_detail_toolbar_scrim_height"
                android:background="@drawable/toolbar_top_scrim"
                android:importantForAccessibility="no"
                app:layout_collapseMode="pin" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:elevation="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/window_background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/windowBackground"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/item_type"
                    style="@style/PlayaTextItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/sub_text"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title"
                    style="@style/PlayaTextItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/event_time_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PlayaTextItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/detail_when"
                            android:textAllCaps="true"
                            android:textColor="@color/sub_text"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_time"
                            style="@style/PlayaTextItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/location_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PlayaTextItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/detail_where"
                            android:textAllCaps="true"
                            android:textColor="@color/sub_text"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/location_address"
                            style="@style/PlayaTextItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textSize="22sp"
                            android:visibility="gone" />

                        <LinearLayout
                            android:id="@+id/location_times"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <include layout="@layout/walk_bike_times" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/metadata_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/metadata_label"
                            style="@style/PlayaTextItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textAllCaps="true"
                            android:textColor="@color/sub_text"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/metadata_primary"
                            style="@style/PlayaTextItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/metadata_secondary"
                            style="@style/PlayaTextItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/sub_text"
                            android:textSize="17sp"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/audio_tour_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/about_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/PlayaTextItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/detail_about"
                        android:textAllCaps="true"
                        android:textColor="@color/sub_text"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/body"
                        style="@style/PlayaTextItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:autoLink="web"
                        android:lineSpacingMultiplier="1.3"
                        android:singleLine="false"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/host_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="64dp"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PlayaTextItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/detail_hosted_by"
                            android:textAllCaps="true"
                            android:textColor="@color/sub_text"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/host_name"
                            style="@style/PlayaTextItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/overflow_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/window_background"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
